[package]
name = "unitconvert"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
console = "0.15.11"
dialoguer = "0.11.0"
once_cell = "1"
regex = "1"
strsim = "0.11.1"
strum = "0.27.1"
strum_macros = "0.27.1"
thiserror = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
